[package]
name = "booster"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ['json', 'stream'] }
reqwest-eventsource = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
